# bazel-python-package-example

./: LICENSE.md  MODULE.bazel  README.md
.buildkite/: pipeline.yml  template.yml
app/: BUILD.bazel  main.py  requirements.txt  requirements_lock.txt
package/: BUILD.bazel  hello_test.py
